# ASCII-Renderer

./: .gitignore  Cargo.toml  package-lock.json  package.json
public/: HistogramWorker.js
rust/: .gitignore  Cargo.toml
rust/src/: AsciiImageTransformer.rs  FontImageTransformer.rs  lib.rs  main.rs  main_old.rs
src/: App.js  main.rs
src/components/: ColorPickerQueue.js  FontImageTransformer.js  FontLoader.js  GlyphTile.js  HistogramWorkerHandler.js  ImageLoader.js
src/css/: GlyphTile.css
