[package]
name = "ASCII-Renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.3"
image = "0.24.5"
rayon = "1.5.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
ttf-parser = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3"

[lib]
crate-type = ["cdylib"]